--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,11 @@
+
 .carousel-inner{
     height: 90vh;
 }
 .carousel-inner img{
     height: 90vh;
     filter: brightness(40%);
+}
+main .modal-area{
+    height: 200px;
 }
